Added files via upload

--- a/index.html
+++ b/index.html
@@ -51,14 +51,15 @@
               </nav>
             </div>
           </div>
-
+		<img src="img/rekallLogo.png">	
           <div class="inner cover">
+			
             <h1 class="cover-heading">For the memories of a lifetime, Rekall.</h1>
             <p class="lead">Would you like to ski Antarctica... but are snowed under at work?  Do you dream of a vacation at the bottom of the ocean... but you can't float the bill?  Have you always wanted to climb the mountains of Mars... but now you're over the hill?
 			<BR>
 			Welcome to Rekall, Incorporated.</p>
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
+              <a href="index2.html" class="btn btn-lg btn-default">Learn more</a>
             </p>
           </div>
 
