Added files via upload

--- a/about.html
+++ b/about.html
@@ -45,23 +45,20 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Project name</a>
+              <a class="navbar-brand" href="index.html">REKALL, INC</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li class="active"><a href="index2.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+				<li><a href="faq.html">FAQ</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
                     <li><a href="#">Something else here</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li class="dropdown-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
                   </ul>
                 </li>
               </ul>
@@ -86,7 +83,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading"><a href="#destination">Choose your destination.</a> <span class="text-muted">It'll blow your mind.</span></h2>
+          <h2 class="featurette-heading"><a name="anchor" id="destination">Choose your destination.</a> <span class="text-muted">It'll blow your mind.</span></h2>
           <p class="lead">From the peak of Olympus Mons on Mars to the hellish battlefield of Normandy beach in June, 1944, your EgoTrip can be configured in nearly any way you like.</p>
         </div>
         <div class="col-md-5">
@@ -98,7 +95,7 @@
 
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading"><a href="#role">Choose your role.</a> <span class="text-muted">See for yourself.</span></h2>
+          <h2 class="featurette-heading"><a name="anchor" id="role">Choose your role.</a> <span class="text-muted">See for yourself.</span></h2>
           <p class="lead">What never changes about you?  YOU!  Now you can take on virtually any role you can imagine such as secret agent, billionaire playboy, war hero, racecar driver, and so much more.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
@@ -110,7 +107,7 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading"><a href="#companion">Choose your companions.</a> <span class="text-muted">Checkmate.</span></h2>
+          <h2 class="featurette-heading"><a name="anchor" id="companion">Choose your companions.</a> <span class="text-muted">Checkmate.</span></h2>
           <p class="lead">From your spouse to your friends to a custom companion created specifically to your tastes, you can bring along virtually anyone you like.</p>
         </div>
         <div class="col-md-5">
