--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="index2.html">Home</a></li>
-                  <li><a href="#">Features</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a href="about.html">About</a></li>
+                  <li><a href="contact.html">Contact</a></li>
                 </ul>
               </nav>
             </div>
@@ -58,6 +58,7 @@
             <p class="lead">Would you like to ski Antarctica... but are snowed under at work?  Do you dream of a vacation at the bottom of the ocean... but you can't float the bill?  Have you always wanted to climb the mountains of Mars... but now you're over the hill?
 			<BR>
 			Welcome to Rekall, Incorporated.</p>
+			<iframe width="475" height="250" src="https://www.youtube.com/embed/lak6Nf-aSvQ" frameborder="0" allowfullscreen></iframe>
             <p class="lead">
               <a href="index2.html" class="btn btn-lg btn-default">Learn more</a>
             </p>
