--- a/rekall-master/navbar.html
+++ b/rekall-master/navbar.html
@@ -49,10 +49,12 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
 				  <ul class="nav navbar-nav">
-					<li><a href="index2.html">Home</a></li>
+					<li><a href="index3.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="contact.html">Contact</a></li>
+					<li><a href="products.html">Products</a></li>
 					<li><a href="faq.html">FAQ</a></li>
+					<li><a href="faq2.html">FAQ II</a></li>
 					<li class="dropdown"></li>     
                   </ul>
                 </li>
