--- a/rekall-master/navbar_login.html
+++ b/rekall-master/navbar_login.html
@@ -33,7 +33,7 @@
 <!-- NAVBAR
 ================================================== -->
 <body>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"/>
   
   <script>
 	  $(document).ready(function(){
@@ -73,7 +73,9 @@
                 <li><a href="index2.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
+				<li><a href="products.html">Products</a></li>
 				<li><a href="faq.html">FAQ</a></li>
+					<li><a href="faq2.html">FAQ II</a></li>
                 <li class="dropdown">
                   <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Login <span class="caret"></span></a>
                   <ul class="dropdown-menu">
