--- a/rekall-master/success.html
+++ b/rekall-master/success.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
 <html lang="en">
-
+	<meta http-equiv="refresh" content="3; URL='index3.html'"/>
 	<head>
 	  <meta charset="utf-8">
 
@@ -14,6 +14,6 @@
 	</head>
 
 <body>
-  SUCCESSS
+  SUCCESSSS
 </body>
 </html>
