--- a/contact.html
+++ b/contact.html
@@ -7,9 +7,9 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/kuato.ico">
 
-    <title>Rekall, INC</title>
+    <title>Rekall: CONTACT US</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
     <link href="css/cover.css" rel="stylesheet">
 	
 	<!-- Contact Styles -->
-	<link href="css/contactstyle.css" rel="stylsheet"
+	<link href="css/contactstyle.css" rel="stylsheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -35,41 +35,9 @@
   </head>
 
   <body>
-    <div class="navbar-wrapper">
-      <div class="container">
-
-        <nav class="navbar navbar-inverse navbar-static-top">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="index.html">REKALL, INC</a>
-            </div>
-            <div id="navbar" class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li class="active"><a href="index2.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-				<li><a href="faq.html">FAQ</a></li>
-                <li class="dropdown">
-                  <a href="underConstruction.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Schedule An Appointment <span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="underConstruction.html">Action</a></li>
-                    <li><a href="underConstruction.html">Another action</a></li>
-                    <li><a href="underConstruction.html">Something else here</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-
-      </div>
-    </div>
+  
+  <div w3-include-HTML="navbar.html"></div>
+  <script src="js/w3-include-HTML.js"></script>
 
 	<section>
 		<div>
@@ -77,7 +45,7 @@
 				<div class="col-sm-12">
 					<div class="row">
 						<div class="col-sm-8 col-sm-offset-2">
-							<div>
+							<div><br><br><br><br>
 								<h2>CONTACT US</h2>
 							</div>
 							<form method="post" data-form-title="CONTACT US">
@@ -95,7 +63,7 @@
 									<textarea class="form-control" name="message" placeholder="Message" rows="7" data-form-field="Message"></textarea>
 								</div>
 								<div>
-									<button type="submit" class="btn btn-lg btn-danger"><a href="underConstruction.html">CONTACT US</A></button>
+									<button type="submit" class="btn btn-lg btn-danger"><a href="underConstruction.html">CONTACT US</a></button>
 								</div>
 							</form>
 						</div>
